# VulkanTutorial

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: CMakeLists.txt
src/week1/: CMakeLists.txt
src/week1/env/: CMakeLists.txt
src/week1/setup/: CMakeLists.txt
src/week1/setup/base/: CMakeLists.txt  main.cpp
src/week1/setup/device/: CMakeLists.txt  main.cpp
src/week1/setup/instance/: CMakeLists.txt  main.cpp
src/week1/setup/loader/: CMakeLists.txt  main.cpp
src/week1/setup/physical_device/: CMakeLists.txt  main.cpp
src/week1/setup/vulkan_hpp/: CMakeLists.txt  main.cpp
src/week2/: CMakeLists.txt
src/week2/presentation/: CMakeLists.txt
src/week2/presentation/imageviews/: CMakeLists.txt  main.cpp
src/week2/presentation/surface/: CMakeLists.txt  main.cpp
src/week2/presentation/swapchain/: CMakeLists.txt  main.cpp
src/week3/: CMakeLists.txt
src/week3/GraphicsPipelineBasics/: CMakeLists.txt
src/week3/GraphicsPipelineBasics/FixedFunctions/: CMakeLists.txt  main.cpp
src/week3/GraphicsPipelineBasics/RenderPasses/: CMakeLists.txt  main.cpp
src/week3/GraphicsPipelineBasics/ShaderModules/: CMakeLists.txt  compile.bat  main.cpp
src/week3/graphicspipeline/: CMakeLists.txt
src/week3/graphicspipeline/conclusion/: CMakeLists.txt  compile.bat  main.cpp
src/week3/graphicspipeline/fixed/: CMakeLists.txt  main.cpp
src/week3/graphicspipeline/intro/: main.cpp
src/week3/graphicspipeline/renderpass/: CMakeLists.txt  main.cpp
src/week3/graphicspipeline/shader/: CMakeLists.txt  main.cpp
src/week4/: CMakeLists.txt
src/week4/Drawing/: CMakeLists.txt
src/week4/Drawing/CommandBuffers/: CMakeLists.txt  main.cpp
src/week4/Drawing/Framebuffers/: config.h.in  main.cpp
src/week4/Drawing/FramesInFlight/: CMakeLists.txt  main.cpp  shader.vert
src/week4/Drawing/RenderingAndPresentation/: CMakeLists.txt  main.cpp
src/week4/SwapchainRecreation/: CMakeLists.txt  main.cpp
src/week4/drawing/: CMakeLists.txt
src/week4/drawing/commandbuffers/: CMakeLists.txt  main.cpp
src/week4/drawing/framebuffers/: CMakeLists.txt  main.cpp
src/week4/drawing/frames_in_flight/: CMakeLists.txt
src/week4/drawing/reference/: CMakeLists.txt  main.cpp
src/week4/drawing/render_present/: CMakeLists.txt  main.cpp
src/week4/drawing/swapchain_recreation/: CMakeLists.txt  main.cpp
src/week5/: CMakeLists.txt
src/week5/shaders/: config.h.in  shader.vert
src/week5/vertexbuffers/: CMakeLists.txt
src/week5/vertexbuffers/index_buffer/: CMakeLists.txt  main.cpp
src/week5/vertexbuffers/index_buffer/shaders/: compile.bat
src/week5/vertexbuffers/reference/: CMakeLists.txt  main.cpp
src/week5/vertexbuffers/staging_buffer/: CMakeLists.txt  main.cpp
src/week5/vertexbuffers/vertex_buffer_creation/: CMakeLists.txt  main.cpp
src/week5/vertexbuffers/vertex_input/: CMakeLists.txt  main.cpp
src/week6/: CMakeLists.txt
src/week6/Uniformbuffers/: CMakeLists.txt
src/week6/Uniformbuffers/DescriptorLayoutAndBuffer/: CMakeLists.txt  main.cpp  shader.vert
src/week6/Uniformbuffers/DescriptorPoolAndSets/: CMakeLists.txt  main.cpp  shader.vert
src/week6/uniformbuffers/: CMakeLists.txt
src/week6/uniformbuffers/descriptor_layout_buffer/: CMakeLists.txt  main.cpp
src/week6/uniformbuffers/descriptor_pool_sets/: CMakeLists.txt  main.cpp
src/week6/uniformbuffers/reference/: CMakeLists.txt  main.cpp
src/week7/: CMakeLists.txt
src/week7/Clearcolor/: CMakeLists.txt  common.h  main.cpp
src/week7/Texturemapping/: CMakeLists.txt
src/week7/Texturemapping/CombinedImageSampler/: CMakeLists.txt  config.h.in  main.cpp
src/week7/Texturemapping/ImageViewAndSampler/: CMakeLists.txt  main.cpp  shader.frag  shader.vert
src/week7/Texturemapping/Images/: CMakeLists.txt  common.h  main.cpp
src/week7/shaders/: shader.frag
src/week7/texturemapping/: CMakeLists.txt
src/week7/texturemapping/combined_image_sampler/: CMakeLists.txt  main.cpp
src/week7/texturemapping/images/: CMakeLists.txt  main.cpp
src/week7/texturemapping/imageview_sampler/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
